# rssbot

./: .gitignore  Cargo.toml  Dockerfile  README.md  config.example.toml  docker-compose.yml
migrations/: 001_initial.sql  002_channel_specific_feeds.sql  003_add_indexes.sql
misc/: test.py
opinionated/: ai.json  cloud.json  comics.json  google.json  meta.json  microsoft.json  nvidia.json  security.json  tech.json
src/: main.rs
src/cmd/: add.rs  list.rs  mod.rs  opinionated.rs  remove.rs  setup.rs  sync.rs
src/data/: mod.rs  models.rs
src/scheduler/: tasks.rs
src/util/: fetcher.rs  mod.rs  parser.rs  webhook.rs
